[gd_scene load_steps=4 format=3 uid="uid://7ls2xfrydc5e"]

[ext_resource type="Script" path="res://Frown.gd" id="1_3pbkh"]
[ext_resource type="Script" path="res://title.gd" id="3_53ekp"]
[ext_resource type="Script" path="res://wine.gd" id="4_6uq3t"]

[node name="Frown" type="Node2D" node_paths=PackedStringArray("choose_path", "launch_button", "install_button")]
script = ExtResource("1_3pbkh")
choose_path = NodePath("FileDialog")
launch_button = NodePath("LaunchButton")
install_button = NodePath("InstallButton")

[node name="Title" type="Label" parent="."]
offset_right = 960.0
offset_bottom = 64.0
text = "Frown - SmileOS Loader for *"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_53ekp")

[node name="PathButton" type="Button" parent="."]
offset_left = 64.0
offset_top = 448.0
offset_right = 320.0
offset_bottom = 512.0
text = "Select \"ULTRAKILL\" Path"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
position = Vector2i(0, 36)
size = Vector2i(499, 147)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="LaunchButton" type="Button" parent="."]
visible = false
offset_left = 640.0
offset_top = 448.0
offset_right = 896.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Launch Game"

[node name="InstallButton" type="Button" parent="."]
offset_left = 640.0
offset_top = 448.0
offset_right = 896.0
offset_bottom = 512.0
text = "Install LIAR"

[node name="Wayland" type="CheckButton" parent="."]
offset_left = 640.0
offset_top = 352.0
offset_right = 896.0
offset_bottom = 376.0
text = "Enable Wayland"

[node name="OpenGL" type="CheckButton" parent="."]
offset_left = 640.0
offset_top = 376.0
offset_right = 896.0
offset_bottom = 400.0
text = "Force OpenGL
"

[node name="WINE" type="CheckButton" parent="."]
offset_left = 640.0
offset_top = 400.0
offset_right = 896.0
offset_bottom = 424.0
text = "Use Translation Layer"
script = ExtResource("4_6uq3t")

[node name="BepInEx" type="CheckButton" parent="."]
offset_left = 640.0
offset_top = 424.0
offset_right = 896.0
offset_bottom = 448.0
button_pressed = true
text = "Enable BepInEx"

[connection signal="pressed" from="PathButton" to="." method="_on_path_button_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="InstallButton" to="." method="_on_install_button_pressed"]
